--- a/app/src/main/res/layout/activity_bottom.xml
+++ b/app/src/main/res/layout/activity_bottom.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Bottom_Activity">
 
-    <androidx.viewpager2.widget.ViewPager2
+    <FrameLayout
         android:id="@+id/viewpager_home"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -18,7 +18,7 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/search_button"
+        android:id="@+id/bottom_search_button"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,7 +58,7 @@
         android:layout_height="0dp"
         app:layout_constraintHeight_percent="0.08"
         app:layout_constraintWidth_percent="0.5"
-        app:layout_constraintStart_toEndOf="@+id/search_button"
+        app:layout_constraintStart_toEndOf="@+id/bottom_search_button"
         app:layout_constraintTop_toBottomOf="@+id/viewpager_home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
