--- a/app/src/main/res/layout/activity_items.xml
+++ b/app/src/main/res/layout/activity_items.xml
@@ -8,11 +8,11 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/item_box"
-        android:layout_width="150dp"
-        android:layout_height="200dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="5dp">
+        app:layout_constraintStart_toStartOf="parent"
+        >
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/item_image"
@@ -21,12 +21,26 @@
             android:src="@drawable/simulook"
             android:scaleType="centerCrop"
             app:layout_constraintHeight_percent="0.7"
+            android:maxHeight="250dp"
+            android:minHeight="50dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
 
             />
+<!--즐찾/와드박기-->
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/bookmark"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/star"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"
+            />
 
+
+<!--동영상파일일경우 아래 플레이아이콘 겹치게 나오게하기-->
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/play_image"
             android:layout_width="0dp"
@@ -38,7 +52,8 @@
             app:layout_constraintHeight_percent="0.3"
             app:layout_constraintStart_toStartOf="@+id/item_image"
             app:layout_constraintTop_toTopOf="@+id/item_image"
-            app:layout_constraintWidth_percent="0.3" />
+            app:layout_constraintWidth_percent="0.3"
+            android:visibility="gone"/>
 
 
         <androidx.appcompat.widget.AppCompatTextView
