--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -17,13 +17,15 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.appcompat.widget.AppCompatEditText
+            android:layout_marginStart="10dp"
             android:id="@+id/search_edit_text"
             android:layout_width="0dp"
             android:layout_height="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.8" />
+            app:layout_constraintWidth_percent="0.8"
+            android:hint="검색하고 싶은 이미지를 입력해주세요."/>
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/search_button"
@@ -48,6 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scrollbars="vertical"
+        android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@+id/search_box"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
